--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+hsqldb/.DS_Store
+hsqldb/tmp/*
+hsqldb/out/*
+hsqldb/.idea/*
+.DS_Store
